<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <EditText
        android:id="@+id/dialog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/dialog_last_name" />

    <EditText
        android:id="@+id/dialog_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/lastname"
        app:layout_constraintBottom_toTopOf="@+id/dialog_city" />

    <EditText
        android:id="@+id/dialog_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/city"
        app:layout_constraintBottom_toTopOf="@+id/yearsView" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/sex"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/sex"
        app:layout_constraintEnd_toEndOf="@+id/dialog_year"
        app:layout_constraintStart_toStartOf="@+id/dialog_year"
        app:layout_constraintTop_toBottomOf="@+id/dialog_year" />

    <RadioGroup
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/yearsView"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/gender_female" />

    </RadioGroup>

    <TextView
        android:id="@+id/dialog_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/year_born"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/sex"
        app:layout_constraintStart_toStartOf="@+id/dialog_city"
        app:layout_constraintTop_toBottomOf="@+id/dialog_city" />


    <EditText
        android:id="@+id/yearsView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="0"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toEndOf="@+id/dialog_year"
        app:layout_constraintTop_toTopOf="@+id/dialog_year"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>