...
        android:background="@color/white"
        tools:context="ru.a1024bits.bytheway.ui.fragments.UserProfileFragment">

        <include layout="@layout/profile_main_image" />

        <LinearLayout
            android:id="@+id/headerprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp"
...
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="@string/fullname" />

            <TextView
                android:id="@+id/cityview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:freezesText="true"
                tools:text="@string/city_in_the_world"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sexAndAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:freezesText="true"
                tools:text="@string/sex_and_age"
...
