...
    <string name="date">Дата</string>
    <string name="sex">Пол</string>
    <string name="name">Имя</string>
    <string name="default_phone_code">+7</string>
    <string name="gender_male">М</string>
    <string name="gender_female">Ж</string>
    <string name="save">Сохранить</string>
    <string name="exit">Выйти</string>
    <string name="search_users_text">Поиск</string>
    <string name="text_away_from_profile">Сохранить измененные данные?</string>
    <string name="fill_required_fields">Пожалуйста заполните обязательные поля:</string>
    <string name="fill_phone_invalid">Неверный формат телефона</string>
    <string name="fill_diff_cities">Города не должны совпадать</string>
...
    <string name="add_new_trip">+ Создать поездку</string>
    <string name="app_in_the_air">App in the Air</string>
    <string name="personal_flight_assistant">Personal flight assistant</string>
    <string name="app_sinchronized">Синхронизация с App in the Air</string>
    <string name="text_sinch_app_air">Для автоматического создания поездок и быстрого поиска попутчиков мы можем добавить ваши рейсы  из приложения App in the Air.</string>
    <string name="sinch_button">СИНХРОНИЗИРОВАТЬ</string>
    <string name="miss">пропустить</string>
    <string name="hint_all_travelers_description">Если Вы захотите присоединиться к другим путешествиям, можете использовать этот экран. Фильтр поможет Вам :)</string>
    <string name="close_hint">ДАЛЕЕ</string>

    <string-array name="months_array">
        <item>янв</item>
        <item>фев</item>
...
