...
        android:background="@drawable/custom_rec"
        android:elevation="4dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <EditText
            android:id="@+id/startCity"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/city_from"
            android:inputType="text"
            android:nextFocusForward="@+id/endCity"
            android:saveEnabled="true"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_text_size" />

        <EditText
            android:id="@+id/endCity"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/startCity"
            android:layout_marginBottom="26dp"
            android:hint="@string/city_to"
            android:inputType="text"
            android:nextFocusForward="@+id/startBudget"
            android:saveEnabled="true"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_text_size" />

        <TextView
            android:id="@+id/dateText"
...
            android:id="@+id/choseDateEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/choseDateStart"
            android:layout_alignBottom="@+id/choseDateStart"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/endAge"
            android:layout_marginEnd="5dp"
            android:drawablePadding="4dip"
            android:saveEnabled="true"
            android:text="@string/filters_all_users_empty_date"
            android:textSize="@dimen/standard_text_size"
            android:theme="@style/UsersTextInFilters" />
...
                android:backgroundTint="@color/colorPrimary"
                android:text="Ж"
                android:textColor="@color/colorFiltersText"
                android:textSize="@dimen/standard_text_size" />

            <RadioButton
                android:id="@+id/sexAny"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:checked="true"
                android:text="@string/any"
                android:textColor="@color/colorFiltersText"
...

        <TextView
            android:id="@+id/fromAgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/fromBudgetText"
            android:layout_alignTop="@+id/startAge"
            android:text="@string/from"
            android:textSize="@dimen/standard_text_size" />

        <Spinner
            android:id="@+id/startAge"
            android:layout_width="wrap_content"
...
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/fromBudgetText"
            android:layout_alignStart="@id/startAge"
            android:layout_toEndOf="@id/fromBudgetText"
            android:inputType="number"
            android:nextFocusForward="@+id/endBudget"
            android:nextFocusRight="@id/endBudget"
            android:saveEnabled="true"
            android:theme="@style/UsersTextInFilters" />

        <TextView
            android:id="@+id/byBudgetText"
...
