<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile_item"
            android:icon="@drawable/ic_profile"
            android:title="@string/drawer_item_profile" />
        <item
            android:id="@+id/search_item"
            android:icon="@drawable/ic_search_companions"
            android:title="@string/drawer_item_map_search" />
        <item
            android:id="@+id/all_users_item"
            android:icon="@drawable/ic_all_users"
            android:title="@string/drawer_item_allusers" />
        <item
            android:icon="@android:color/transparent"
            android:title="" />
        <item
            android:icon="@android:color/transparent"
            android:title="" />
    </group>
</menu>
